--- a/Keyring-SampleApp1/Keyring-Kotlin-SampleApp1/app/build.gradle
+++ b/Keyring-SampleApp1/Keyring-Kotlin-SampleApp1/app/build.gradle
@@ -44,6 +44,8 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
+    implementation "androidx.core:core-ktx:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation "com.huawei.hms:keyring-credential:6.1.1.302"
 }
