--- a/Keyring-SampleApp2/Keyring-Kotlin-SampleApp2/app/build.gradle
+++ b/Keyring-SampleApp2/Keyring-Kotlin-SampleApp2/app/build.gradle
@@ -44,7 +44,7 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation "androidx.core:core-ktx:+"
+    implementation "androidx.core:core-ktx:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation "com.huawei.hms:keyring-credential:6.1.1.302"
